- Fix for bug #14646, floor() always returns a float now.